Revert "Fix vertical align of dropdown contents"
This reverts commit 64b33f0ac5c58da9e17e3422c5b23cf9b161e67c.

--- a/css/main.scss
+++ b/css/main.scss
@@ -401,8 +401,4 @@ code {
     }
 }
 
-.select2-selection, .select2-selection__rendered {
-    line-height: 32px !important;
-}
-
 @import "monokai.css";
